# diana

./: .gitignore  README.md
agent/: README.md  pyproject.toml
agent/src/: agent.py
agent/tests/: test_agent.py
mobile/: .gitignore  README.md  analysis_options.yaml  pubspec.yaml  taskfile.yaml
mobile/android/app/: build.gradle
mobile/android/app/src/main/: AndroidManifest.xml
mobile/ios/Flutter/: AppFrameworkInfo.plist
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/ios/Runner/Assets.xcassets/AppIcon.appiconset/: Contents.json
mobile/lib/: app.dart  exts.dart  main.dart
mobile/lib/controllers/: app_ctrl.dart
mobile/lib/screens/: agent_screen.dart  welcome_screen.dart
mobile/lib/support/: agent_selector.dart
mobile/lib/ui/: color_pallette.dart
mobile/lib/widgets/: agent_layout_switcher.dart  app_layout_switcher.dart  button.dart  camera_toggle_button.dart  control_bar.dart  floating_glass.dart  message_bar.dart  session_error_banner.dart
mobile/macos/Flutter/: GeneratedPluginRegistrant.swift
mobile/macos/Runner/: DebugProfile.entitlements  Info.plist  Release.entitlements
mobile/macos/Runner.xcodeproj/: project.pbxproj
mobile/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
mobile/macos/Runner/Base.lproj/: MainMenu.xib
mobile/macos/Runner/Configs/: AppInfo.xcconfig
mobile/test/: widget_test.dart
mobile/web/: index.html  manifest.json
web/: .env.example  app-config.ts  package.json  pnpm-lock.yaml
(+1 files in other folders)
